Clarify that the flags header displays a combination of options passed to the JVM and options/settings triggered by the options passed in. It is not just the options passed to the JVM.